@@ -33,12 +33,11 @@ public class CreateMutationChangeLogTest {
   private static final String NAMES_PRED = "http://schema.org/name";
   private static final String GRAPH_QL_STRING = "xsd_string";
   private DataSet dataSet;
-  private TypeNameStore typeNameStore;
 
   @BeforeEach
   public void setUp() throws Exception {
     dataSet = mock(DataSet.class);
-    typeNameStore = mock(TypeNameStore.class);
+    TypeNameStore typeNameStore = mock(TypeNameStore.class);
     when(typeNameStore.makeUriForPredicate(NAMES_FIELD)).thenReturn(Optional.of(tuple(NAMES_PRED, Direction.OUT)));
     when(typeNameStore.makeUri(GRAPH_QL_STRING)).thenReturn(STRING);
     when(dataSet.getTypeNameStore()).thenReturn(typeNameStore);
@@ -53,7 +52,7 @@ public class CreateMutationChangeLogTest {
     entity.put("creations", creations);
     CreateMutationChangeLog instance = new CreateMutationChangeLog(new Graph(GRAPH), SUBJECT, TYPE_URI, entity);
 
-    List<Change> adds = instance.getAdditions(dataSet).collect(toList());
+    List<Change> adds = instance.getAdditions(dataSet).toList();
 
     assertThat(adds.size(), is(2));
     assertThat(adds.get(0), is(likeChange()
@@ -76,7 +75,7 @@ public class CreateMutationChangeLogTest {
     entity.put("creations", creations);
     CreateMutationChangeLog instance = new CreateMutationChangeLog(new Graph(GRAPH), SUBJECT, TYPE_URI, entity);
 
-    List<Change> adds = instance.getAdditions(dataSet).collect(toList());
+    List<Change> adds = instance.getAdditions(dataSet).toList();
 
     assertThat(adds.size(), is(2));
     assertThat(adds.get(0), is(likeChange()
